fix jump issue

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a {
   align-items: center;
   border-radius: 15px;
   color: gold;
-  padding: 8px;
+  padding: 10px;
   margin: 200px;
   cursor: pointer;
   background-color: black;
@@ -56,7 +56,9 @@ body{
   border-radius: 15px;
 }
 h2{
-  font-family: sans-serif;
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 35px;
+  margin-left: 35px;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 55px;
+  color: gold;
 }
